--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "cindex"
 description = "CSV indexing library"
 version = "0.1.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+readme = "README.md"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/simhyeon/cindex"
+repository = "https://github.com/simhyeon/cindex"
+keywords = ["text-processing", "csv", "indexing"]
+categories = ["text-processing"]
 
 [lib]
 name = "cindex"
