--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ categories = ["text-processing"]
 name = "cindex"
 path = "src/lib.rs"
 
+[features]
+default = ["rayon"]
+
 [dependencies]
-rayon = "1.5.1"
+rayon = { version = "1.5.1", optional = true}
 thiserror = "1.0.25"
 indexmap = "1.6.2"
