--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cindex"
 description = "CSV indexing library"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2018"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
@@ -18,8 +18,7 @@ path = "src/lib.rs"
 default = ["rayon"]
 
 [dependencies]
+dcsv = { version = "0.1.3", path = "../dcsv"}
 rayon = { version = "1.5.1", optional = true}
-thiserror = "1.0.25"
-indexmap = "1.6.2"
 regex = "1.5.4"
 bitflags = "1.3.2"
