--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/lib.rs"
 default = ["rayon"]
 
 [dependencies]
-dcsv = { version = "0.1.3", path = "../dcsv"}
+dcsv = { version = "0.1.3"}
 rayon = { version = "1.5.1", optional = true}
 regex = "1.5.4"
 bitflags = "1.3.2"
