--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cindex"
 description = "CSV indexing library"
-version = "0.4.2"
+version = "0.5.0"
 edition = "2018"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
@@ -15,7 +15,6 @@ name = "cindex"
 path = "src/lib.rs"
 
 [dependencies]
-dcsv = { version = "0.1.4"}
+dcsv = { git="https://github.com/simhyeon/dcsv", branch="dev" ,version = "0.2.0"}
 rayon = { version = "1.5.1", optional = true}
 regex = "1.5.4"
-bitflags = "1.3.2"
