dcsv from cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ name = "cindex"
 path = "src/lib.rs"
 
 [dependencies]
-dcsv = { git="https://github.com/simhyeon/dcsv", branch="dev" ,version = "0.2.0"}
+dcsv = { version = "0.2.0"}
 rayon = { version = "1.5.1", optional = true}
 regex = "1.5.4"
