--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ name = "cindex"
 path = "src/lib.rs"
 
 [dependencies]
-dcsv = { version = "0.3.3-rc2", git="https://github.com/simhyeon/dcsv"}
+dcsv = { version = "0.3.4-beta.2"}
 rayon = { version = "1.5.1", optional = true}
 regex = "1.10.2"
