--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cindex"
 description = "CSV indexing library"
-version = "0.5.2"
+version = "0.6.0-beta.1"
 edition = "2018"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
